--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
-    - uses: actions/checkout@v5
-      with:
-        repository: https://gitlab.unige.ch/lettres/services/existdb.git
-
-    - uses: redhat-actions/buildah-build@v2
-      with:
-        image: ${{ env.IMAGE }}
-        containerfiles: ./Containerfile
-    - if: github.ref == 'refs/heads/main'
-      uses: redhat-actions/push-to-registry@v2
+    - uses: docker://registry.gitlab.unige.ch/lettres/services/existdb:latest
